# poly-sniff

./: .env.example  .gitignore  MIT License  README.md  __main__.py  config.py  output.py  pyproject.toml  scaffold.py
data/: loader.py  preprocessing.py  scraper.py
docs/plans/: 2026-03-08-ai-discovery-design.md  2026-03-08-intel-signals-design.md  2026-03-08-intel-signals-plan.md
metrics/: activity.py  conviction.py  directional.py  dominance.py  timing.py
poly_sniff/: __main__.py  config.py  sniff.py
poly_sniff/metrics/: signal.py
poly_sniff/search/: ai_discovery.py  claims.py  config.py  polymarket.py  ranker.py
tests/: test_signal.py
