[build-system]
requires = ["setuptools >= 65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poly_sniff"
version = "0.4.0"
description = "Polymarket intelligence tool — claim-to-market search + insider behavior detection"
readme = "README.md"
license = "MIT"
requires-python = ">= 3.10"
dependencies = [
    "pandas",
    "openpyxl",
    "requests",
    "tabulate",
    "python-dotenv",
]

[project.scripts]
poly_sniff = "poly_sniff.__main__:main"